--- a/Data_Augmentation.ipynb
+++ b/Data_Augmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "id": "076943cc",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "id": "5b956287",
    "metadata": {},
    "outputs": [],
@@ -23,12 +23,12 @@
     "from glob import glob\n",
     "from tqdm import tqdm\n",
     "import imageio\n",
-    "from albumentations import VerticalFlip, HorizontalFlip, ElasticTransform, GridDistortion, OpticalDistortion, CoarseDropout, ShiftScaleRotate, Compose"
+    "from albumentations import VerticalFlip, HorizontalFlip, ElasticTransform, GridDistortion, OpticalDistortion, CoarseDropout, ShiftScaleRotate, Compose, RandomRotate90"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "id": "bec4d7e0",
    "metadata": {},
    "outputs": [],
@@ -41,25 +41,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
    "id": "82b2b188",
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_data(path):\n",
     "    \"\"\"X = images and Y = masks \"\"\"\n",
-    "    train_x = sorted(glob(os.path.join(path, \"train\", \"image\", \"*.*\")))\n",
-    "    train_y = sorted(glob(os.path.join(path, \"train\", \"mask\", \"*.*\")))\n",
+    "    train_x = sorted(glob(os.path.join(path, \"Train\", \"Image\", \"*.*\")))\n",
+    "    train_y = sorted(glob(os.path.join(path, \"Train\", \"Mask\", \"*.*\")))\n",
     "\n",
-    "    test_x = sorted(glob(os.path.join(path, \"test\", \"image\", \"*.*\")))\n",
-    "    test_y = sorted(glob(os.path.join(path, \"test\", \"mask\", \"*.*\")))\n",
-    "\n",
+    "    test_x = sorted(glob(os.path.join(path, \"Test\", \"Image\", \"*.*\")))\n",
+    "    test_y = sorted(glob(os.path.join(path, \"Test\", \"Mask\", \"*.*\"))) \n",
     "    return (train_x, train_y), (test_x, test_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "id": "7a14ad27",
    "metadata": {},
    "outputs": [],
@@ -74,38 +73,78 @@
     "\n",
     "        \"\"\"Reading image and mask\"\"\"\n",
     "        x = cv2.imread(x, cv2.IMREAD_COLOR)\n",
-    "        y = cv2.imread(y, cv2.IMREAD_COLOR)\n",
+    "        y = imageio.imread(y)\n",
+    "        y = np.array(y)\n",
     "\n",
     "        if augment:\n",
     "            \n",
-    "            #Horizontal Flip and Translate\n",
+    "            aug = RandomRotate90(p=1.0)\n",
+    "            augmented = aug(image=x, mask=y)\n",
+    "            x4 = augmented['image']\n",
+    "            y4 = augmented['mask']\n",
+    "            \n",
+    "            aug = RandomRotate90(p=1.0)\n",
+    "            augmented = aug(image=x4, mask=y4)\n",
+    "            x5 = augmented['image']\n",
+    "            y5 = augmented['mask']\n",
+    "            \n",
+    "            aug = RandomRotate90(p=1.0)\n",
+    "            augmented = aug(image=x5, mask=y5)\n",
+    "            x6 = augmented['image']\n",
+    "            y6 = augmented['mask']\n",
+    "            \n",
+    "#Horizontal Flip\n",
     "            aug = HorizontalFlip(p=1.0)\n",
     "            augmented = aug(image=x, mask=y)\n",
     "            x1 = augmented[\"image\"]\n",
     "            y1 = augmented[\"mask\"]\n",
-    "            aug = Compose([ShiftScaleRotate (rotate_limit=0, border_mode=cv2.BORDER_CONSTANT, shift_limit_x=-0.2, shift_limit_y=0.2, p=1)])\n",
+    "            \n",
+    "            aug = RandomRotate90(p=1.0)\n",
     "            augmented = aug(image=x1, mask=y1)\n",
-    "            x1 = augmented['image']\n",
-    "            y1 = augmented['mask']\n",
-    " \n",
-    "            #Vertical Flip and Translate\n",
+    "            x7 = augmented['image']\n",
+    "            y7 = augmented['mask']\n",
+    "            \n",
+    "            aug = RandomRotate90(p=1.0)\n",
+    "            augmented = aug(image=x7, mask=y7)\n",
+    "            x8 = augmented['image']\n",
+    "            y8 = augmented['mask']\n",
+    "            \n",
+    "            aug = RandomRotate90(p=1.0)\n",
+    "            augmented = aug(image=x8, mask=y8)\n",
+    "            x9 = augmented['image']\n",
+    "            y9 = augmented['mask']\n",
+    "            \n",
+    "#Vertical Flip\n",
     "            aug = VerticalFlip(p=1.0)\n",
     "            augmented = aug(image=x, mask=y)\n",
     "            x2 = augmented[\"image\"]\n",
     "            y2 = augmented[\"mask\"]\n",
-    "            aug = Compose([ShiftScaleRotate (rotate_limit=0, border_mode=cv2.BORDER_CONSTANT, shift_limit_x=-0.15, shift_limit_y=0.15, p=1)])\n",
+    "            \n",
+    "            aug = RandomRotate90(p=1.0)\n",
     "            augmented = aug(image=x2, mask=y2)\n",
-    "            x2 = augmented['image']\n",
-    "            y2 = augmented['mask']\n",
+    "            x10 = augmented['image']\n",
+    "            y10 = augmented['mask']\n",
+    "            \n",
+    "            aug = RandomRotate90(p=1.0)\n",
+    "            augmented = aug(image=x10, mask=y10)\n",
+    "            x11 = augmented['image']\n",
+    "            y11 = augmented['mask']\n",
+    "            \n",
+    "            aug = RandomRotate90(p=1.0)\n",
+    "            augmented = aug(image=x11, mask=y11)\n",
+    "            x12 = augmented['image']\n",
+    "            y12 = augmented['mask']\n",
     "\n",
-    "            #Only X-Y translation\n",
-    "            aug = Compose([ShiftScaleRotate (rotate_limit=0, border_mode=cv2.BORDER_CONSTANT, shift_limit_x=-0.1, shift_limit_y=0.1, p=1)])\n",
+    "#Only X-Y translation\n",
+    "            aug = Compose([ShiftScaleRotate (rotate_limit=0, border_mode=cv2.BORDER_CONSTANT, shift_limit_x=-0.05, shift_limit_y=0.05, p=1)])\n",
     "            augmented = aug(image=x, mask=y)\n",
     "            x3 = augmented['image']\n",
     "            y3 = augmented['mask']\n",
+    "            \n",
+    "            \n",
     "\n",
-    "            X = [x, x1, x2, x3]\n",
-    "            Y = [y, y1, y2, y3]\n",
+    "            X = [x, x1, x2, x4, x5, x6, x7, x8, x9, x10, x11, x12]\n",
+    "            Y = [y, y1, y2, y4, y5, y6, y7, y8, y9, y10, y11, y12]\n",
     "\n",
     "        else:\n",
     "            X = [x]\n",
@@ -113,8 +152,6 @@
     "\n",
     "        index = 0\n",
     "        for image, mask in zip(X, Y):\n",
-    "            image = cv2.resize(image, (W, H))\n",
-    "            mask = cv2.resize(mask, (W, H))\n",
     "\n",
     "            if len(X) == 1:\n",
     "                tmp_image_name = f\"{name}.jpg\"\n",
@@ -123,8 +160,8 @@
     "                tmp_image_name = f\"{name}_{index}.jpg\"\n",
     "                tmp_mask_name = f\"{name}_{index}.jpg\"\n",
     "\n",
-    "            image_path = os.path.join(save_path, \"image\", tmp_image_name)\n",
-    "            mask_path = os.path.join(save_path, \"mask\", tmp_mask_name)\n",
+    "            image_path = os.path.join(save_path, \"Image\", tmp_image_name)\n",
+    "            mask_path = os.path.join(save_path, \"Mask\", tmp_mask_name)\n",
     "\n",
     "            \"\"\"Saving the image\"\"\"\n",
     "            cv2.imwrite(image_path, image)\n",
@@ -135,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "id": "74c09f46",
    "metadata": {},
    "outputs": [
@@ -143,14 +180,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train: 1752 - 1752\n"
+      "Train: 20 - 20\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1752/1752 [02:14<00:00, 13.04it/s]\n"
+      "  0%|          | 0/20 [00:00<?, ?it/s]C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_19944\\2951491552.py:11: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "  y = imageio.imread(y)\n",
+      "100%|██████████| 20/20 [00:04<00:00,  4.69it/s]\n",
+      "100%|██████████| 20/20 [00:03<00:00,  5.57it/s]\n"
      ]
     }
    ],
@@ -160,25 +200,20 @@
     "    np.random.seed(42)\n",
     "\n",
     "    \"\"\"Load the data\"\"\"\n",
-    "    data_path = \"Data/\"\n",
-    "    (train_x, train_y) = load_data(data_path)\n",
+    "    data_path = \"Datasets/DRIVE/Drive_enhanced/\"\n",
+    "    (train_x, train_y), (test_x, test_y) = load_data(data_path)\n",
     "    print(f\"Train: {len(train_x)} - {len(train_y)}\")\n",
     "    \n",
     "    \"\"\"DATA AUGMENTATION\"\"\"\n",
     "    # Creating directories\n",
-    "    create_dir(\"Phase_3/Train/Image\")\n",
-    "    create_dir(\"Phase_3/Train/Mask\")\n",
+    "    create_dir(\"Datasets/DRIVE/Drive_Aug/Train/image\")\n",
+    "    create_dir(\"Datasets/DRIVE/Drive_Aug/Train/Mask\")\n",
+    "    create_dir(\"Datasets/DRIVE/Drive_Aug/Test/Image\")\n",
+    "    create_dir(\"Datasets/DRIVE/Drive_Aug/Test/Mask\")\n",
     "\n",
-    "    augment_data(train_x, train_y, \"Phase_1/Train/\", augment=True)"
+    "    augment_data(train_x, train_y, \"Datasets/DRIVE/Drive_Aug/Train/\", augment=True)\n",
+    "    augment_data(test_x, test_y, \"Datasets/DRIVE/Drive_Aug/Test/\", augment=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57b112b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
