--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "id": "_koxe9gUGndN"
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "id": "2GHsan0XGyzV"
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "id": "BeNj7A9aGy18"
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "id": "xLM_SjfvGy3e"
    },
@@ -79,12 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_dir = 'Retina Segmentation Dataset/test/image'\n",
-    "output_dir = 'Preprocessed/Test/Image'\n",
+    "input_dir = 'Datasets/DRIVE/Drive/Train/Image'\n",
+    "output_dir = 'Datasets/DRIVE/Drive_enhanced/Train/Image'\n",
     "\n",
     "# Iterate over each file in the input directory\n",
     "for filename in os.listdir(input_dir):\n",
@@ -101,26 +101,8 @@
     "    # denormalise the enhanced image to get range 0-255\n",
     "    enhanced_denorm_image = denormalise(enhanced_img)\n",
     "    # Write the processed image to file      \n",
-    "    cv2.imwrite(output_path, enhanced_denorm_image)\n",
-    "    \n",
-    "     # Read the image from file\n",
-    "    image = cv2.imread(output_path)\n",
-    "    # Perform some image processing operations on the image\n",
-    "    norm_img = normalize(image) \n",
-    "    # enhance using ietk method \n",
-    "    enhanced_img = enhance2(norm_img)\n",
-    "    # denormalise the enhanced image to get range 0-255\n",
-    "    enhanced_denorm_image = denormalise(enhanced_img)\n",
-    "    # Write the processed image to file      \n",
     "    cv2.imwrite(output_path, enhanced_denorm_image)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
