--- a/Data_Augmentation.ipynb
+++ b/Data_Augmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "076943cc",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "5b956287",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "bec4d7e0",
    "metadata": {},
    "outputs": [],
@@ -41,156 +41,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "82b2b188",
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_data(path):\n",
     "    \"\"\"X = images and Y = masks \"\"\"\n",
-    "    train_x = sorted(glob(os.path.join(path, \"Train\", \"Image\", \"*.*\")))\n",
-    "    train_y = sorted(glob(os.path.join(path, \"Train\", \"Mask\", \"*.*\")))\n",
+    "    train_x = sorted(glob(os.path.join(path, \"train\", \"*.*\")))\n",
+    "    train_y = sorted(glob(os.path.join(path, \"train_nonhr\", \"*.*\")))\n",
     "\n",
-    "    test_x = sorted(glob(os.path.join(path, \"Test\", \"Image\", \"*.*\")))\n",
-    "    test_y = sorted(glob(os.path.join(path, \"Test\", \"Mask\", \"*.*\"))) \n",
+    "    test_x = sorted(glob(os.path.join(path, \"val\", \"*.*\")))\n",
+    "    test_y = sorted(glob(os.path.join(path, \"val_nonhr\", \"*.*\"))) \n",
     "    return (train_x, train_y), (test_x, test_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "7a14ad27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def augment_data(images, masks, save_path, augment=True):\n",
+    "def augment_data(images, save_path, augment=True):\n",
     "    H = 512\n",
     "    W = 512\n",
     "\n",
-    "    for idx, (x, y) in tqdm(enumerate(zip(images, masks)), total=len(images)):\n",
+    "    for idx, x in tqdm(enumerate(images), total=len(images)):\n",
     "        \"\"\"Extracting names\"\"\"\n",
     "        name = x.split(\"\\\\\")[-1].split(\".\")[0]\n",
     "\n",
     "        \"\"\"Reading image and mask\"\"\"\n",
     "        x = cv2.imread(x, cv2.IMREAD_COLOR)\n",
-    "        y = imageio.imread(y)\n",
-    "        y = np.array(y)\n",
     "\n",
     "        if augment:\n",
     "            \n",
     "            aug = RandomRotate90(p=1.0)\n",
-    "            augmented = aug(image=x, mask=y)\n",
+    "            augmented = aug(image=x)\n",
     "            x4 = augmented['image']\n",
-    "            y4 = augmented['mask']\n",
-    "            \n",
-    "            aug = RandomRotate90(p=1.0)\n",
-    "            augmented = aug(image=x4, mask=y4)\n",
-    "            x5 = augmented['image']\n",
-    "            y5 = augmented['mask']\n",
-    "            \n",
-    "            aug = RandomRotate90(p=1.0)\n",
-    "            augmented = aug(image=x5, mask=y5)\n",
-    "            x6 = augmented['image']\n",
-    "            y6 = augmented['mask']\n",
     "            \n",
     "#Horizontal Flip\n",
     "            aug = HorizontalFlip(p=1.0)\n",
-    "            augmented = aug(image=x, mask=y)\n",
+    "            augmented = aug(image=x)\n",
     "            x1 = augmented[\"image\"]\n",
-    "            y1 = augmented[\"mask\"]\n",
     "            \n",
     "            aug = RandomRotate90(p=1.0)\n",
-    "            augmented = aug(image=x1, mask=y1)\n",
+    "            augmented = aug(image=x1)\n",
     "            x7 = augmented['image']\n",
-    "            y7 = augmented['mask']\n",
-    "            \n",
-    "            aug = RandomRotate90(p=1.0)\n",
-    "            augmented = aug(image=x7, mask=y7)\n",
-    "            x8 = augmented['image']\n",
-    "            y8 = augmented['mask']\n",
-    "            \n",
-    "            aug = RandomRotate90(p=1.0)\n",
-    "            augmented = aug(image=x8, mask=y8)\n",
-    "            x9 = augmented['image']\n",
-    "            y9 = augmented['mask']\n",
     "            \n",
     "#Vertical Flip\n",
     "            aug = VerticalFlip(p=1.0)\n",
-    "            augmented = aug(image=x, mask=y)\n",
+    "            augmented = aug(image=x)\n",
     "            x2 = augmented[\"image\"]\n",
-    "            y2 = augmented[\"mask\"]\n",
     "            \n",
     "            aug = RandomRotate90(p=1.0)\n",
-    "            augmented = aug(image=x2, mask=y2)\n",
-    "            x10 = augmented['image']\n",
-    "            y10 = augmented['mask']\n",
+    "            augmented = aug(image=x2)\n",
+    "            x10 = augmented['image']         \n",
     "            \n",
-    "            aug = RandomRotate90(p=1.0)\n",
-    "            augmented = aug(image=x10, mask=y10)\n",
-    "            x11 = augmented['image']\n",
-    "            y11 = augmented['mask']\n",
-    "            \n",
-    "            aug = RandomRotate90(p=1.0)\n",
-    "            augmented = aug(image=x11, mask=y11)\n",
-    "            x12 = augmented['image']\n",
-    "            y12 = augmented['mask']\n",
-    "\n",
-    "#Only X-Y translation\n",
-    "            aug = Compose([ShiftScaleRotate (rotate_limit=0, border_mode=cv2.BORDER_CONSTANT, shift_limit_x=-0.05, shift_limit_y=0.05, p=1)])\n",
-    "            augmented = aug(image=x, mask=y)\n",
-    "            x3 = augmented['image']\n",
-    "            y3 = augmented['mask']\n",
-    "            \n",
-    "            \n",
-    "\n",
-    "            X = [x, x1, x2, x4, x5, x6, x7, x8, x9, x10, x11, x12]\n",
-    "            Y = [y, y1, y2, y4, y5, y6, y7, y8, y9, y10, y11, y12]\n",
+    "            X = [x, x1, x2, x4, x7, x10]\n",
     "\n",
     "        else:\n",
     "            X = [x]\n",
-    "            Y = [y]\n",
     "\n",
     "        index = 0\n",
-    "        for image, mask in zip(X, Y):\n",
+    "        for image in X:\n",
     "\n",
     "            if len(X) == 1:\n",
     "                tmp_image_name = f\"{name}.jpg\"\n",
-    "                tmp_mask_name = f\"{name}.jpg\"\n",
     "            else:\n",
     "                tmp_image_name = f\"{name}_{index}.jpg\"\n",
-    "                tmp_mask_name = f\"{name}_{index}.jpg\"\n",
     "\n",
-    "            image_path = os.path.join(save_path, \"Image\", tmp_image_name)\n",
-    "            mask_path = os.path.join(save_path, \"Mask\", tmp_mask_name)\n",
+    "            image_path = os.path.join(save_path, tmp_image_name)\n",
     "\n",
     "            \"\"\"Saving the image\"\"\"\n",
     "            cv2.imwrite(image_path, image)\n",
-    "            cv2.imwrite(mask_path, mask)\n",
     "\n",
     "            index += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "74c09f46",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train: 20 - 20\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/20 [00:00<?, ?it/s]C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_19944\\2951491552.py:11: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
-      "  y = imageio.imread(y)\n",
-      "100%|██████████| 20/20 [00:04<00:00,  4.69it/s]\n",
-      "100%|██████████| 20/20 [00:03<00:00,  5.57it/s]\n"
+      "100%|██████████| 89/89 [00:03<00:00, 24.19it/s]\n",
+      "100%|██████████| 180/180 [01:16<00:00,  2.36it/s]\n",
+      "100%|██████████| 34/34 [00:02<00:00, 13.86it/s]\n",
+      "100%|██████████| 81/81 [00:34<00:00,  2.35it/s]\n"
      ]
     }
    ],
@@ -200,19 +142,20 @@
     "    np.random.seed(42)\n",
     "\n",
     "    \"\"\"Load the data\"\"\"\n",
-    "    data_path = \"Datasets/DRIVE/Drive_enhanced/\"\n",
+    "    data_path = \"Datasets/HR/HR_preprocessed/\"\n",
     "    (train_x, train_y), (test_x, test_y) = load_data(data_path)\n",
-    "    print(f\"Train: {len(train_x)} - {len(train_y)}\")\n",
     "    \n",
     "    \"\"\"DATA AUGMENTATION\"\"\"\n",
     "    # Creating directories\n",
-    "    create_dir(\"Datasets/DRIVE/Drive_Aug/Train/image\")\n",
-    "    create_dir(\"Datasets/DRIVE/Drive_Aug/Train/Mask\")\n",
-    "    create_dir(\"Datasets/DRIVE/Drive_Aug/Test/Image\")\n",
-    "    create_dir(\"Datasets/DRIVE/Drive_Aug/Test/Mask\")\n",
+    "    create_dir(\"Datasets/HR/HR_aug/train\")\n",
+    "    create_dir(\"Datasets/HR/HR_aug/train_nonhr\")\n",
+    "    create_dir(\"Datasets/HR/HR_aug/val\")\n",
+    "    create_dir(\"Datasets/HR/HR_aug/val_nonhr\")\n",
     "\n",
-    "    augment_data(train_x, train_y, \"Datasets/DRIVE/Drive_Aug/Train/\", augment=True)\n",
-    "    augment_data(test_x, test_y, \"Datasets/DRIVE/Drive_Aug/Test/\", augment=True)"
+    "    augment_data(train_x, \"Datasets/HR/HR_aug/train\", augment=True)\n",
+    "    augment_data(train_y, \"Datasets/HR/HR_aug/train_nonhr\", augment=True)\n",
+    "    augment_data(test_x, \"Datasets/HR/HR_aug/val\", augment=True)\n",
+    "    augment_data(test_y, \"Datasets/HR/HR_aug/val_nonhr\", augment=True)"
    ]
   }
  ],
